@@ -35,6 +35,8 @@ TL/03 Bugzilla 1433: Fix DMARC SEGV with specific From header contents.
 PP/01 Continue incomplete 4.82 PP/19 by fixing docs too: use dns_dnssec_ok
       not dns_use_dnssec.
 
+JH/03 Bugzilla 1157: support log_selector smtp_confirmation for lmtp.
+
 
 Exim version 4.82
 -----------------
